Rezolvat task 2 si task 3