@@ -10,7 +10,7 @@ import lombok.Setter;
 public abstract class Soil extends Entity {
     protected static final double MAX_SCORE = 100;
     protected static final double PERCENT = 100.0;
-    
+
     protected double nitrogen;
     protected double waterRetention;
     protected double soilpH;
@@ -27,7 +27,13 @@ public abstract class Soil extends Entity {
      * Calculates and normalizes the final result
      */
     public void calculateFinalResult() {
-        double normalizeScore = Math.max(0, Math.min(MAX_SCORE, calculateQuality()));
+        double normalizeScore = Math.clamp(calculateQuality(), 0, MAX_SCORE);
         finalResult = Math.round(normalizeScore * PERCENT) / PERCENT;
     }
+
+    /**
+     * Calculates the possibility to get stuck in this soil type.
+     * @return The possibility to get stuck
+     */
+    public abstract double possibilityToGetStuckInSoil();
 }
